[gd_scene load_steps=16 format=2]

[ext_resource path="res://elements/LifeBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://elements/HeroPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://elements/DebugLabel.tscn" type="PackedScene" id=3]
[ext_resource path="res://fonts/Kenney Mini Square.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://SharedVariablesDemo.gd" type="Script" id=5]
[ext_resource path="res://fonts/Kenney Future Narrow.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://shared_variables/player_hp_current.tres" type="Resource" id=7]
[ext_resource path="res://shared_variables/player_hp_max.tres" type="Resource" id=8]
[ext_resource path="res://shared_variables/player_skin.tres" type="Resource" id=9]
[ext_resource path="res://shared_variables/player_name.tres" type="Resource" id=10]
[ext_resource path="res://elements/SkinOptionButton.gd" type="Script" id=11]
[ext_resource path="res://addons/eh_jogos.shared_variables/inspector_plugin/SVEditorControls.gd" type="Script" id=13]

[sub_resource type="DynamicFont" id=1]
size = 22
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 36
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 22
use_filter = true
font_data = ExtResource( 6 )

[node name="SharedVariablesDemo" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 1608.11, 0 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SVEditorControls" type="Node" parent="."]
script = ExtResource( 13 )
__meta__ = {
"_player_hp_current": ExtResource( 7 ),
"_player_hp_max": ExtResource( 8 ),
"_player_name": ExtResource( 10 ),
"_player_skin": ExtResource( 9 )
}
settings = {
"#cr-export": "Custom Resources",
"#sv-export": "Shared Variables"
}
__player_hp_max = ExtResource( 8 )
__player_hp_current = ExtResource( 7 )
__player_name = ExtResource( 10 )
__player_skin = ExtResource( 9 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LifeBar" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_left = 254.0
margin_top = 7.0
margin_right = 770.0
margin_bottom = 107.0
size_flags_horizontal = 4
custom_constants/margin_bottom = 0

[node name="SVEditorControls" type="Node" parent="VBoxContainer/LifeBar"]
script = ExtResource( 13 )
__meta__ = {
"_health_current": ExtResource( 7 ),
"_health_max": ExtResource( 8 )
}
settings = {
"#cr-export": "Custom Resources",
"#sv-export": "Shared Variables"
}
__health_max = ExtResource( 8 )
__health_current = ExtResource( 7 )

[node name="Player" parent="VBoxContainer" instance=ExtResource( 2 )]
margin_top = 127.0
margin_right = 1024.0
margin_bottom = 344.0

[node name="SVEditorControls" type="Node" parent="VBoxContainer/Player"]
script = ExtResource( 13 )
__meta__ = {
"health_current": ExtResource( 7 ),
"health_max": ExtResource( 8 ),
"player_name": ExtResource( 10 ),
"player_skin": ExtResource( 9 )
}
settings = {
"#cr-export": "Custom Resources",
"#sv-export": "Shared Variables"
}
_health_max = ExtResource( 8 )
_health_current = ExtResource( 7 )
_player_name = ExtResource( 10 )
_player_skin = ExtResource( 9 )

[node name="Menu" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 364.0
margin_right = 1024.0
margin_bottom = 398.0
custom_constants/separation = 15
alignment = 1

[node name="MaxHpUpgrade" type="Button" parent="VBoxContainer/Menu"]
margin_left = 169.0
margin_right = 363.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 1 )
text = "Max HP Upgrade"

[node name="TakeDamage" type="Button" parent="VBoxContainer/Menu"]
margin_left = 378.0
margin_right = 535.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 1 )
text = "Take Damage"

[node name="Heal" type="Button" parent="VBoxContainer/Menu"]
margin_left = 550.0
margin_right = 615.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 1 )
text = "Heal"

[node name="Save" type="Button" parent="VBoxContainer/Menu"]
margin_left = 630.0
margin_right = 701.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 1 )
text = "Save"

[node name="Load" type="Button" parent="VBoxContainer/Menu"]
margin_left = 716.0
margin_right = 781.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 1 )
text = "Load"

[node name="SkinOptionButton" type="OptionButton" parent="VBoxContainer/Menu"]
margin_left = 796.0
margin_right = 854.0
margin_bottom = 34.0
text = "Blue"
items = [ "Blue", null, false, 0, null, "Yellow", null, false, 1, null, "Green", null, false, 2, null ]
selected = 0
script = ExtResource( 11 )

[node name="SVEditorControls" type="Node" parent="VBoxContainer/Menu/SkinOptionButton"]
script = ExtResource( 13 )
__meta__ = {
"_player_skin": ExtResource( 9 )
}
settings = {
"#cr-export": "Custom Resources",
"#sv-export": "Shared Variables"
}
__player_skin = ExtResource( 9 )

[node name="DebugPanel" type="PanelContainer" parent="VBoxContainer"]
margin_top = 418.0
margin_right = 1024.0
margin_bottom = 593.0
size_flags_horizontal = 5

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/DebugPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 168.0

[node name="Title" type="Label" parent="VBoxContainer/DebugPanel/VBoxContainer"]
margin_right = 1010.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 2 )
text = "Debug Panel"
align = 1

[node name="PlayerState" parent="VBoxContainer/DebugPanel/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 45.0
margin_right = 1010.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 3 )
text = "player_state: alive"
align = 0

[node name="eh_CustomEditorControls" type="Node" parent="VBoxContainer/DebugPanel/VBoxContainer/PlayerState"]
script = ExtResource( 13 )
settings = {
"#cr-export": "Custom Resources",
"#sv-export": "Shared Variables"
}

[node name="HpMax" parent="VBoxContainer/DebugPanel/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 75.0
margin_right = 1010.0
margin_bottom = 101.0
custom_fonts/font = SubResource( 3 )
text = "player_hp_max: 20"
align = 0
shared_variable = ExtResource( 8 )

[node name="HpCurrent" parent="VBoxContainer/DebugPanel/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 105.0
margin_right = 1010.0
margin_bottom = 131.0
custom_fonts/font = SubResource( 3 )
text = "player_hp_current: 10"
align = 0
shared_variable = ExtResource( 7 )

[node name="PlayerSkin" parent="VBoxContainer/DebugPanel/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 135.0
margin_right = 199.0
margin_bottom = 161.0
size_flags_horizontal = 0
custom_fonts/font = SubResource( 3 )
text = "player_skin: 0"
align = 0
shared_variable = ExtResource( 9 )

[connection signal="pressed" from="VBoxContainer/Menu/MaxHpUpgrade" to="." method="_on_MaxHpUpgrade_pressed"]
[connection signal="pressed" from="VBoxContainer/Menu/TakeDamage" to="." method="_on_TakeDamage_pressed"]
[connection signal="pressed" from="VBoxContainer/Menu/Heal" to="." method="_on_Heal_pressed"]
[connection signal="pressed" from="VBoxContainer/Menu/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="VBoxContainer/Menu/Load" to="." method="_on_Load_pressed"]
